// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test double-lined params should remove the new line for param names that are two lines 1`] = `
const { fbt } = require("fbtee");
fbt._(
  /* __FBT__ start */ {
    jsfbt: { m: [], t: { desc: "d", text: "{two lines} test" } },
    project: "",
  } /* __FBT__ end */,
  [
    fbt._param(
      "two lines",
      /*#__PURE__*/ React.createElement(
        "b",
        null,
        fbt._(
          /* __FBT__ start */ {
            jsfbt: { m: [], t: { desc: "test", text: "simple" } },
            project: "",
          } /* __FBT__ end */
        )
      )
    ),
  ]
);

`;

exports[`fbt variable binding detection should handle commonJS require() 1`] = `
const fbt = require("fbtee");
fbt._(
  /* __FBT__ start */ {
    jsfbt: { m: [], t: { desc: "Bar", text: "Foo" } },
    project: "",
  } /* __FBT__ end */
);

`;

exports[`fbt variable binding detection using ES6 should handle fbt default export 1`] = `
import fbt from "fbtee";
fbt._(
  /* __FBT__ start */ {
    jsfbt: { m: [], t: { desc: "Bar", text: "Foo" } },
    project: "",
  } /* __FBT__ end */
);

`;

exports[`fbt variable binding detection using ES6 should handle the named fbt export 1`] = `
import { fbt } from "fbtee";
fbt._(
  /* __FBT__ start */ {
    jsfbt: { m: [], t: { desc: "Bar", text: "Foo" } },
    project: "",
  } /* __FBT__ end */
);

`;

exports[`fbt() API:  using FBT subject should accept "subject" as a parameter 1`] = `
const { fbt } = require("fbtee");
fbt._(
  /* __FBT__ start */ {
    jsfbt: {
      m: [{ token: "__subject__", type: 1 }],
      t: { "*": { desc: "Bar", text: "Foo" } },
    },
    project: "",
  } /* __FBT__ end */,
  [fbt._subject(foo)]
);

`;

exports[`fbt() API:  using FBT subject with string templates should accept "subject" as a parameter 1`] = `
const { fbt } = require("fbtee");
fbt._(
  /* __FBT__ start */ {
    jsfbt: {
      m: [{ token: "__subject__", type: 1 }],
      t: { "*": { desc: "Bar", text: "Foo" } },
    },
    project: "",
  } /* __FBT__ end */,
  [fbt._subject(foo)]
);

`;
